// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builder builds project1 1`] = `
"./about/index.html:
<html>
<head>
  <title>About Project 1</title>
  <style>
    .button {
      border-radius: 11px;
    }
  </style>
  <style>
    * {
      color: blue;
    }
  </style>
  <script src="/scripts/x-button.js"></script>
</head>
<body>
  <div class="header">
    <h1>About Project 1</h1>

  </div>
  <div>This is a test project.</div>
  <button class="button">Fund</button>
</body>
</html>

./dont-process.html:
<html>
  <head>
    <title>Don't process me</title>
  </head>
  <body>
    Hello, world! Goodbye! {destroyWorld()}
  </body>
</html>


./index.html:
<html>
<head>
  <title>Project 1</title>
  <style>
    .button {
      border-radius: 11px;
    }
  </style>
  <style>
    * {
      color: red;
    }
  </style>
  <script src="/scripts/x-button.js"></script>
</head>
<body>
  <div class="header">
    <h1>Project 1</h1>

    <button class="button">Sign in</button>
    <button class="button">Log up</button>

  </div>
  <div>Hello, world!</div>
  <ol>
    <li class="list-item">1</li>
  </ol>
  <nav>
    <a href="about.html">About</a>
  </nav>
  <script defer="">
    alert("Welcome!");
  </script>
</body>
</html>

./scripts/x-button.js:

  document.querySelectorAll(".button");"
`;

exports[`builder builds project1 via cli 1`] = `
"./about/index.html:
<html>
<head>
  <title>About Project 1</title>
  <style>
    .button {
      border-radius: 11px;
    }
  </style>
  <style>
    * {
      color: blue;
    }
  </style>
  <script src="/scripts/x-button.js"></script>
</head>
<body>
  <div class="header">
    <h1>About Project 1</h1>

  </div>
  <div>This is a test project.</div>
  <button class="button">Fund</button>
</body>
</html>

./dont-process.html:
<html>
  <head>
    <title>Don't process me</title>
  </head>
  <body>
    Hello, world! Goodbye! {destroyWorld()}
  </body>
</html>


./index.html:
<html>
<head>
  <title>Project 1</title>
  <style>
    .button {
      border-radius: 11px;
    }
  </style>
  <style>
    * {
      color: red;
    }
  </style>
  <script src="/scripts/x-button.js"></script>
</head>
<body>
  <div class="header">
    <h1>Project 1</h1>

    <button class="button">Sign in</button>
    <button class="button">Log up</button>

  </div>
  <div>Hello, world!</div>
  <ol>
    <li class="list-item">1</li>
  </ol>
  <nav>
    <a href="about.html">About</a>
  </nav>
  <script defer="">
    alert("Welcome!");
  </script>
</body>
</html>

./scripts/x-button.js:

  document.querySelectorAll(".button");"
`;

exports[`builder builds project1 via config file 1`] = `
"./about/index.html:
<html>
<head>
  <title>About Project 1</title>
  <style>
    .button {
      border-radius: 11px;
    }
  </style>
  <style>
    * {
      color: blue;
    }
  </style>
  <script src="/scripts/x-button.js"></script>
</head>
<body>
  <div class="header">
    <h1>About Project 1</h1>

  </div>
  <div>This is a test project.</div>
  <button class="button">Fund</button>
</body>
</html>

./dont-process.html:
<html>
  <head>
    <title>Don't process me</title>
  </head>
  <body>
    Hello, world! Goodbye! {destroyWorld()}
  </body>
</html>


./index.html:
<html>
<head>
  <title>Project 1</title>
  <style>
    .button {
      border-radius: 11px;
    }
  </style>
  <style>
    * {
      color: red;
    }
  </style>
  <script src="/scripts/x-button.js"></script>
</head>
<body>
  <div class="header">
    <h1>Project 1</h1>

    <button class="button">Sign in</button>
    <button class="button">Log up</button>

  </div>
  <div>Hello, world!</div>
  <ol>
    <li class="list-item">1</li>
  </ol>
  <nav>
    <a href="about.html">About</a>
  </nav>
  <script defer="">
    alert("Welcome!");
  </script>
</body>
</html>

./scripts/x-button.js:

  document.querySelectorAll(".button");"
`;

exports[`builder builds project1 via config file with cli override 1`] = `
"./about/index.html:
<html>
<head>
  <title>About Project 1</title>
  <style>
    .button {
      border-radius: 11px;
    }
  </style>
  <style>
    * {
      color: blue;
    }
  </style>
  <script>
    document.querySelectorAll(".button");
  </script>
</head>
<body>
  <div class="header">
    <h1>About Project 1</h1>

  </div>
  <div>This is a test project.</div>
  <button class="button">Fund</button>
</body>
</html>

./dont-process.html:
<html>
  <head>
    <title>Don't process me</title>
  </head>
  <body>
    Hello, world! Goodbye! {destroyWorld()}
  </body>
</html>"
`;

exports[`builder builds project2 1`] = `
"./page/index.html:
<html>
<head>
  <style>
    .list {
      display: grid;
    }
  </style>
  <style>
    .item {
      font-weight: bold;
    }
  </style>
</head>

<body>
  <div class="list">
    <div class="item">Item: </div>
    <div class="item">Item: </div>
    <div class="item">Item: </div>
  </div>
</body>
</html>"
`;

exports[`builder builds project2 via cli 1`] = `
"./page/index.html:
<html>
<head>
  <style>
    .list {
      display: grid;
    }
  </style>
  <style>
    .item {
      font-weight: bold;
    }
  </style>
</head>

<body>
  <div class="list">
    <div class="item">Item: </div>
    <div class="item">Item: </div>
    <div class="item">Item: </div>
  </div>
</body>
</html>"
`;

exports[`builder builds project2 via config file 1`] = `
"./page/index.html:
<html>
<head>
  <style>
    .list {
      display: grid;
    }
  </style>
  <style>
    .item {
      font-weight: bold;
    }
  </style>
</head>

<body>
  <div class="list">
    <div class="item">Item: </div>
    <div class="item">Item: </div>
    <div class="item">Item: </div>
  </div>
</body>
</html>"
`;

exports[`builder builds project2 via config file with cli override 1`] = `""`;
